fixes code wrapping on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ code {
 	color: #3273dc;
 	font-size: 90%;
   padding: 0.2rem 0.4rem 0.1rem;
+	word-break: break-all;
 }
 
 .content,
